# model-context-shell

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  main.py  mcp-metadata.json  mcp_client.py  models.py  pyproject.toml  shell_engine.py  toolhive_client.py
.github/workflows/: ci.yml  docker-publish.yml
tests/: test_bwrap_integration.py  test_main.py  test_mcp_client.py  test_shell_engine.py  test_toolhive_client.py
