[project]
name = "model-context-shell"
version = "0.1.0"
description = "A shell interface for coordinating MCP tool calls using Unix-style pipelines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]
