[project]
name = "model-context-shell"
version = "0.1.0"
description = "A shell interface for coordinating MCP tool calls using Unix-style pipelines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "headson>=0.10.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning:_pytest.unraisableexception",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "SIM117", # nested with statements - not always combinable with async tuple unpacking
    "B904",   # raise from - would require invasive changes
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["main", "shell_engine", "mcp_client", "toolhive_client"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
